tests/baselines/reference/infiniteExpansionThroughInstantiation.errors.txt
tests/cases/conformance/types/typeRelationships/recursiveTypes/infiniteExpansionThroughInstantiation.ts(16,1): error TS2322: Type 'OwnerList<文字>' is not assignable to type 'List<文字>'.
  Types of property 'data' are incompatible.
    Type 'List<文字>' is not assignable to type '文字'.
tests/cases/conformance/types/typeRelationships/recursiveTypes/infiniteExpansionThroughInstantiation.ts(21,5): error TS2322: Type 'OwnerList<T>' is not assignable to type 'List<T>'.
  Types of property 'data' are incompatible.
    Type 'List<T>' is not assignable to type 'T'.


==== tests/cases/conformance/types/typeRelationships/recursiveTypes/infiniteExpansionThroughInstantiation.ts (2 errors) ====
    // instantiating a derived type can cause an infinitely expanding type reference to be generated
    
    interface List<T> {
        data: T;
        next: List<T>;
        owner: OwnerList<T>;
    }
    
    // will have an owner property that is an infinitely expanding type reference
    interface OwnerList<U> extends List<List<U>> {
        name: string;
    }
    
    var list: List<string>;
    var ownerList: OwnerList<string>;
    list = ownerList; 
    ~~~~
!!! error TS2322: Type 'OwnerList<文字>' is not assignable to type 'List<文字>'.
!!! error TS2322:   Types of property 'data' are incompatible.
!!! error TS2322:     Type 'List<文字>' is not assignable to type '文字'.
    
    function other<T>(x: T) {
        var list: List<T>;
        var ownerList: OwnerList<T>;
        list = ownerList; 
        ~~~~
!!! error TS2322: Type 'OwnerList<T>' is not assignable to type 'List<T>'.
!!! error TS2322:   Types of property 'data' are incompatible.
!!! error TS2322:     Type 'List<T>' is not assignable to type 'T'.
    
    }
    